<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginFragment.LoginFragment"
    android:background="@drawable/backglogin">

    <TextView
        android:layout_width="150dp"
        android:layout_height="44dp"
        android:text="@string/log_in"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:paddingStart="30dp"
        android:paddingTop="5dp"
        app:layout_constraintBottom_toTopOf="@+id/etMail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/etMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/e_mail"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/usericon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <View
        android:layout_width="260dp"
        android:layout_height="1dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/etMail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="176dp"
        android:drawableStart="@drawable/passwordicon"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <View
        android:id="@+id/view"
        android:layout_width="260dp"
        android:layout_height="1dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <TextView
        android:id="@+id/loginbutton"
        android:layout_width="300dp"
        android:layout_height="44dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/buttonlogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/googlebutton"
        android:layout_width="300dp"
        android:layout_height="44dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/buttongoogle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginbutton" />

    <TextView
        android:id="@+id/buttonfacebook"
        android:layout_width="300dp"
        android:background="@drawable/buttonfacebook"
        android:layout_height="44dp"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/googlebutton" />

    <TextView
        android:id="@+id/registerbutton"
        android:layout_width="300dp"
        android:layout_height="44dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/buttonreg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonfacebook" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/facebookbutton"
        android:layout_width="308dp"
        android:visibility="gone"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/googlebutton" />


</androidx.constraintlayout.widget.ConstraintLayout>